update prm worker

--- a/verl/trainer/config/ppo_trainer.yaml
+++ b/verl/trainer/config/ppo_trainer.yaml
@@ -15,7 +15,7 @@ data:
 actor_rollout_ref:
   hybrid_engine: True
   model:
-    path: /mnt/petrelfs/chengjie/ceph6/Qwen2.5-7B
+    path: /mnt/petrelfs/chengjie/Qwen2.5-7B
     external_lib: null
     override_config: { }
     enable_gradient_checkpointing: True
@@ -93,7 +93,7 @@ critic:
     warmup_style: constant  # select from constant/cosine
     total_training_steps: -1  # must be override by program
   model:
-    path: /mnt/petrelfs/chengjie/ceph6/Qwen2.5-7B
+    path: ${actor_rollout_ref.model.path}
     tokenizer_path: ${actor_rollout_ref.model.path}
     override_config: { }
     external_lib: ${actor_rollout_ref.model.external_lib}
@@ -125,8 +125,14 @@ reward_model:
   type: prm
   training: False
   strategy: fsdp
+  optim:
+    lr: 5e-6
+    lr_warmup_steps_ratio: 0.  # the total steps will be injected during runtime
+    min_lr_ratio: null   # only useful for warmup with cosine
+    warmup_style: constant  # select from constant/cosine
+    total_training_steps: -1  # must be override by program
   model:
-    path: /mnt/petrelfs/chengjie/ceph6/Qwen2.5-7B-PRM-stage2
+    path: /mnt/petrelfs/chengjie/Qwen2.5-7B-PRM-stage2
     external_lib: ${actor_rollout_ref.model.external_lib}
     use_remove_padding: False
     fsdp_config:
