--- a/verl/trainer/config/ppo_trainer.yaml
+++ b/verl/trainer/config/ppo_trainer.yaml
@@ -1,12 +1,12 @@
 data:
   tokenizer: null
-  chat_template: null
-  train_files: /mnt/petrelfs/chengjie/verl/train.parquet
-  val_files: /mnt/petrelfs/chengjie/verl/val.parquet
+  chat_template: null  # override in code
+  train_files: /home/i-chengjie/PURE/train.parquet
+  val_files: [/home/i-chengjie/PURE/aime2024.parquet, /home/i-chengjie/PURE/math500.parquet]
   prompt_key: question
   max_prompt_length: 1024
-  max_response_length: 3072
-  train_batch_size: 128
+  max_response_length: 7168
+  train_batch_size: 96
   val_batch_size: null # DEPRECATED: Validation datasets are sent to inference engines as a whole batch, which will schedule the memory themselves
   return_raw_input_ids: False  # This should be set to true when the tokenizer between policy and rm differs
   return_raw_chat: False
@@ -15,21 +15,21 @@ data:
 actor_rollout_ref:
   hybrid_engine: True
   model:
-    path: /mnt/petrelfs/chengjie/Qwen2.5-7B
+    path: /mnt/step2-alignment-jfs/chengjie/Qwen2.5-7B
     external_lib: null
     override_config: { }
     enable_gradient_checkpointing: True
-    use_remove_padding: False
+    use_remove_padding: True
   actor:
     strategy: fsdp  # This is for backward-compatibility
-    ppo_mini_batch_size: 256
+    ppo_mini_batch_size: 1536
     ppo_micro_batch_size: null # will be deprecated, use ppo_micro_batch_size_per_gpu
-    ppo_micro_batch_size_per_gpu: 2
-    use_dynamic_bsz: False
+    ppo_micro_batch_size_per_gpu: 1
+    use_dynamic_bsz: True
     ppo_max_token_len_per_gpu: 16384 # n * ${data.max_prompt_length} + ${data.max_response_length}
     grad_clip: 1.0
     clip_ratio: 0.2
-    entropy_coeff: 0.001
+    entropy_coeff: 0.
     use_kl_loss: False # True for GRPO
     kl_loss_coef: 0.001 # for grpo
     kl_loss_type: low_var_kl # for grpo
@@ -43,18 +43,18 @@ actor_rollout_ref:
       warmup_style: constant  # select from constant/cosine
       total_training_steps: -1  # must be override by program
     fsdp_config:
-      param_offload: True
-      optimizer_offload: True
+      param_offload: False
+      optimizer_offload: False
       fsdp_size: -1
   ref:
     fsdp_config:
-      param_offload: True
+      param_offload: False
       fsdp_size: -1
     log_prob_micro_batch_size: null # will be deprecated, use log_prob_micro_batch_size_per_gpu
     log_prob_micro_batch_size_per_gpu: 2
     log_prob_use_dynamic_bsz: ${actor_rollout_ref.actor.use_dynamic_bsz}
     log_prob_max_token_len_per_gpu: ${actor_rollout_ref.actor.ppo_max_token_len_per_gpu}
-    ulysses_sequence_parallel_size: ${actor_rollout_ref.actor.ulysses_sequence_parallel_size}
+    ulysses_sequence_parallel_size: 1  # ${actor_rollout_ref.actor.ulysses_sequence_parallel_size}
   rollout:
     name: vllm
     temperature: 1.0
@@ -65,24 +65,24 @@ actor_rollout_ref:
     response_length: ${data.max_response_length}
     # for vllm rollout
     dtype: bfloat16 # should align with FSDP
-    gpu_memory_utilization: 0.7
+    gpu_memory_utilization: 0.6
     ignore_eos: False
     enforce_eager: True
     free_cache_engine: True
     load_format: dummy_dtensor
     tensor_model_parallel_size: 1
-    max_num_batched_tokens: 8192
-    max_model_len: null
-    max_num_seqs: 1024
+    max_num_batched_tokens: null
+    max_model_len: 8192
+    max_num_seqs: 2048
     log_prob_micro_batch_size: null # will be deprecated, use log_prob_micro_batch_size_per_gpu
-    log_prob_micro_batch_size_per_gpu: 4
+    log_prob_micro_batch_size_per_gpu: ${actor_rollout_ref.ref.log_prob_micro_batch_size_per_gpu}
     log_prob_use_dynamic_bsz: ${actor_rollout_ref.actor.use_dynamic_bsz}
     log_prob_max_token_len_per_gpu: ${actor_rollout_ref.actor.ppo_max_token_len_per_gpu}
     disable_log_stats: True
     enable_chunked_prefill: True # may get higher throughput when set to True. When activated, Please increase max_num_batched_tokens or decrease max_model_len.
     # for hf rollout
     do_sample: True
-    n: 4  # 32
+    n: 64
 
 critic:
   strategy: fsdp
@@ -98,7 +98,7 @@ critic:
     override_config: { }
     external_lib: ${actor_rollout_ref.model.external_lib}
     enable_gradient_checkpointing: True
-    use_remove_padding: False
+    use_remove_padding: True
     fsdp_config:
       param_offload: False
       optimizer_offload: False
@@ -106,16 +106,16 @@ critic:
         # transformer_layer_cls_to_wrap: None
         min_num_params: 0
       fsdp_size: -1
-  ppo_mini_batch_size: ${actor_rollout_ref.actor.ppo_mini_batch_size}
+  ppo_mini_batch_size: 128
   ppo_micro_batch_size: null # will be deprecated, use ppo_micro_batch_size_per_gpu
   ppo_micro_batch_size_per_gpu: 2
   forward_micro_batch_size: ${critic.ppo_micro_batch_size}
   forward_micro_batch_size_per_gpu: ${critic.ppo_micro_batch_size_per_gpu}
-  use_dynamic_bsz: ${actor_rollout_ref.actor.use_dynamic_bsz}
-  ppo_max_token_len_per_gpu: 32768 # (${actor_rollout_ref.actor.ppo_max_token_len_per_gpu}) * 2
+  use_dynamic_bsz: True
+  ppo_max_token_len_per_gpu: 24000  # (${actor_rollout_ref.actor.ppo_max_token_len_per_gpu}) * 2
   forward_max_token_len_per_gpu: ${critic.ppo_max_token_len_per_gpu}
   ulysses_sequence_parallel_size: 1 # sp size
-  ppo_epochs: 12
+  ppo_epochs: 1
   shuffle: ${actor_rollout_ref.actor.shuffle}
   grad_clip: 1.0
   cliprange_value: 0.5
@@ -132,45 +132,47 @@ reward_model:
     warmup_style: constant  # select from constant/cosine
     total_training_steps: -1  # must be override by program
   model:
-    path: /mnt/petrelfs/chengjie/Qwen2.5-7B-PRM-stage2
+    path: /mnt/step2-alignment-jfs/chengjie/PURE-PRM-7B
     external_lib: ${actor_rollout_ref.model.external_lib}
-    use_remove_padding: False
+    use_remove_padding: True
     fsdp_config:
       param_offload: False
       optimizer_offload: False
       fsdp_size: -1
   micro_batch_size: null
-  micro_batch_size_per_gpu: {critic.ppo_micro_batch_size_per_gpu}
+  micro_batch_size_per_gpu: 2
   ulysses_sequence_parallel_size: 1
-  use_dynamic_bsz: ${critic.use_dynamic_bsz}
-  forward_max_token_len_per_gpu: ${critic.forward_max_token_len_per_gpu}
-  reward_manager: naive
+  use_dynamic_bsz: True
+  forward_max_token_len_per_gpu: 24000
+  reward_manager: prime
+  verifiable_reward_coef: 1.0
 
 algorithm:
   gamma: 1.0
   lam: 1.0
-  adv_estimator: gae
-  kl_penalty: kl  # how to estimate kl divergence
+  adv_estimator: rloo
+  adv_norm: True
+  kl_penalty: low_var_kl  # how to estimate kl divergence
   kl_ctrl:
     type: fixed
-    kl_coef: 0.001
+    kl_coef: 0.0
 
 trainer:
   total_epochs: 2000
   total_training_steps: null
   project_name: pure_verl
-  experiment_name: qwen25-7b-base
-  logger: [ 'console', 'wandb' ]
+  experiment_name: qwen25-7b-base_prompts-${data.train_batch_size}_n-${actor_rollout_ref.rollout.n}_ppo-bs-${actor_rollout_ref.actor.ppo_mini_batch_size}_nodes-${trainer.nnodes}
+  logger: ['console', 'wandb']
   val_generations_to_log_to_wandb: 0
-  nnodes: 1
+  nnodes: 3
   n_gpus_per_node: 8
-  save_freq: 20
+  save_freq: 50
   # auto: find the last ckpt to resume. If can't find, start from scratch
-  resume_mode: disable # or auto or resume_path if 
-  resume_from_path: False
-  test_freq: 20
+  resume_mode: auto # or auto or resume_path if 
+  resume_from_path: null
+  test_freq: 10
   critic_warmup: 0
   default_hdfs_dir: null
-  remove_previous_ckpt_in_save: True
+  remove_previous_ckpt_in_save: False
   del_local_ckpt_after_load: False
-  default_local_dir: /mnt/petrelfs/chengjie/ceph6/${trainer.project_name}/${trainer.experiment_name}
+  default_local_dir: /mnt/step2-alignment-jfs/chengjie/logs/${trainer.project_name}/${trainer.experiment_name}
